--- a/estilos.css
+++ b/estilos.css
@@ -3,7 +3,6 @@ body {
   --marrom-escuro: #816D4F;
   --marrom-claro: #B29463;
   font-family: 'Barlow', sans-serif;
-  height: 4000px;
 }
 
 input[type=checkbox] {
@@ -19,18 +18,8 @@ input[type="checkbox"]:focus {
   outline: none;
 }
 
-/* Banner */
-
 .banner-1 {
-  background-image: url('./assets/banner-1.png');
-}
-
-.banner-2 {
-  background-image: url('./assets/banner-2.png');
-}
-
-.banner-3 {
-  background-image: url('./assets/banner-3.png');
+  background-image: url(./assets/banner-1.png);
 }
 
 .banners {
@@ -46,11 +35,46 @@ input[type="checkbox"]:focus {
   --bs-bg-opacity: .2;
 }
 
-/* Btn */
+.banner-2{
+  background-image: url(./assets/banner-2.png);
+}
+
+.banner-3{
+  background-image: url(./assets/banner-3.png);
+}
+
+.banners {
+  height: 100vh;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover; 
+  background-position: center;
+  background-attachment: fixed;
+}
+
+.banners-titulo {
+    --bs-bg-opacity: .2;
+}
+
 .botao-padrao {
   background-color: var(--marrom-claro);
+  color: black;
 }
 
 .botao-padrao:hover {
   background-color: var(--marrom-escuro);
+}
+
+.form-range::-webkit-slider-thumb {
+  background-color: var(--marrom-claro);
+}
+
+[data-bs-theme="dark"] {
+ color: white; 
+ .nav-link, .card-body, .offcanvas, .accordion, .btn {
+  --bs-nav-link-color: white;
+  --bs-card-color: white;
+  --bs-offcanvas-color: white;
+  --bs-body-color: white;
+ }
 }
